# property-scores

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
docs/: bushfire.md  commercial-readiness.md  flood.md  heat-island.md  noise-landing-page-prompt.txt  noise.md  solar.md  state-coverage.md  view-quality.md  walkability.md
property_scores/: __init__.py
property_scores/api/: main.py
property_scores/api/static/: bushfire.html  contamination.html  flood.html  heat_island.html  index.html  noise-debug.html  noise.html  solar.html  view_quality.html  walkability.html
property_scores/api/static/css/: input.css  styles.css
property_scores/bushfire/: __init__.py  score.py
property_scores/common/: au_state.py  config.py  download.py  overture.py
property_scores/contamination/: __init__.py  score.py
property_scores/flood/: __init__.py  cache.py  score.py
property_scores/heat_island/: __init__.py  score.py
property_scores/noise/: __init__.py  aircraft.py  buildings.py  cache.py  debug.py  score.py  terrain.py
property_scores/solar/: __init__.py  score.py
property_scores/view_quality/: __init__.py  score.py
property_scores/walkability/: __init__.py  score.py
scripts/: benchmark_all_cities.py  convert_defence_anef.py  download_nfdh_aadt.py  download_wa_aadt.py  precompute_era5_p95.py  precompute_flood.py  precompute_noise.py  process_state_gtfs.py  run_validation.py  train_noise_model.py  train_production_model.py  validate_noise.py
tests/: test_noise.py  test_solar.py
