[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "property-scores"
version = "0.1.0"
description = "Open-data property intelligence scoring engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Bo Wang", email = "admin@limontech.net"}]

dependencies = [
    "duckdb>=1.0",
    "rasterio>=1.3",
    "numpy>=1.24",
    "requests>=2.31",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
ml = ["xgboost>=2.0", "scikit-learn>=1.4"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
